# hwloc

./: .gitignore  CMakeLists.txt
hwloc/: static-components.h
include/hwloc/autogen/: config.h
include/private/autogen/: config.h
